dark mode fixes

--- a/style.css
+++ b/style.css
@@ -10,6 +10,16 @@ body {
   min-height: 100vh;
   transition: all 0.5s ease;
 }
+h1{
+  background: linear-gradient(124.11deg,#e7a28f 3.52%,#ecc79a 41.89%);
+  -webkit-text-fill-color:transparent;
+  -webkit-background-clip:text;
+  text-transform: uppercase;
+  font-family: 'Montserrat', sans-serif;
+}
+h1 .logo{
+  
+}
 header {
   font-size: 1.5rem;
 }
@@ -19,7 +29,6 @@ header {
   box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.07);
   height: 75px;
 }
-
 header,
 form {
   min-height: 20vh;
@@ -53,7 +62,7 @@ form button {
 }
 form button:hover {
   color: white;
-  color: #d88771;
+  color: #e7a28f;
 }
 select {
   -webkit-appearance: none;
@@ -133,7 +142,12 @@ select:focus {
 .fa-check {
   color: green;
 }
-
+.darkmode .fa-trash{
+color:white;
+}
+.darkmode .fa-check{
+color:white;
+}
 .deleteTxt {
   margin: 0 !important;
 }
@@ -153,9 +167,23 @@ select:focus {
   transition: all 0.5s ease;
   cursor: pointer;
 }
-.darkforminput {
+.fa-moon:hover{
+  transform: scale(1.05);
+}
+.darkmode {
   background: rgb(46, 46, 46) !important;
   color: white !important;
+}
+.darkmode .complete-btn{
+  background:transparent;
+}
+.darkmode .trash-btn{
+  background:transparent;
+}
+.darkmode .complete-btn:hover,
+.trash-btn:hover {
+  background: rgb(70, 70, 70);
+  border-radius: 8px;
 }
 .fall {
   transform: translateY(8rem) rotateZ(15deg);
@@ -197,4 +225,10 @@ select:focus {
 .empty p {
   font-size: 1.5rem;
   opacity: 0.2;
+}
+.is-flex{
+  display: flex;
+}
+.is-hidden{
+  display: none;
 }
